<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:background="#DDD"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/mar_card"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EEE"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingredient_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/txt_ingre"
                android:textColor="#999"
                android:textSize="@dimen/txt_ingre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_q"
                android:textSize="@dimen/txt_q" />

            <TextView
                android:id="@+id/measure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_m"
                android:textSize="@dimen/txt_m" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>